maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: Int does not take parameters
  var marquage:Int=litMessage.toInt(x,y)
                                   ^