maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
}

def prop(x:Int,y:Int){
  var marquage:Int=litMessage.toInt(x,y)
  
}